fix skill bubble z-index bug

--- a/_header.scss
+++ b/_header.scss
@@ -29,7 +29,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: url(./picture/notebook.jpg) 50% 70%/cover no-repeat;
+  background: url(./picture/notebook.jpg) center/cover no-repeat;
   transition: transform 2s ease;
 
   @include bp-sm {
